Fix sidebar z-index for large

--- a/base.css
+++ b/base.css
@@ -78,6 +78,7 @@ a:hover {
 @media only screen and (min-width: 1136px) {
     .layout-sidebar {
         position: relative;
+        z-index: auto;
         flex: 1;
         transform: translate3d(0,0,0);
         transition: 0s;
